--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 
 spring.flyway.enabled=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
