Implementação de segurança com JWT e Bcrypt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.flyway.enabled=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
